fix: remove scroll in image cropper

--- a/src/components/imageCropper/image-cropper.css
+++ b/src/components/imageCropper/image-cropper.css
@@ -1,5 +1,5 @@
 .c-image-cropper-container__image {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+    width: auto;
+    height: calc(100vh - 100px);
+    object-fit: contain;
 }
